# acados

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeConfig.txt  CMakeLists.txt  install.sh
acados/sim/: sim_irk_integrator.c  sim_lifted_irk_integrator.c
acados/utils/: external_function_generic.c  external_function_generic.h  mem.h
examples/matlab/: pendulum_model.m
examples/python/: integrator_test.py
interfaces/acados_c/: ocp_nlp_interface.c  sim_interface.c  sim_interface.h
interfaces/acados_cpp/: CMakeLists.txt  discrete_model.cpp  discrete_model.hpp  function_generation.cpp  function_generation.hpp  integrator.cpp  integrator.hpp  simulator.hpp  types.hpp  utils.cpp  utils.hpp
interfaces/acados_cpp/ocp_nlp/: ocp_nlp.cpp
new-test/: CMakeLists.txt  tests.cpp
swig/: CMakeLists.txt  acados.i  simulators.i
swig/python/: CMakeLists.txt
test/python/: tests.py
